Closed Bug 751429 Opened 13 years ago Closed 13 years ago

Drag action is not changed on pressing Ctrl, until the mouse is moved

Categories

(Core :: Widget: Gtk, defect)

Other Branch
x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla15

People

(Reporter: karlt, Assigned: karlt)

References

Details

Attachments

(1 file)

STR: 1. Type some text in a text area or input. 2. Select a portion of the text. 3. Drag the text to a destination within the same window (but don't drop). 4. Press Control. 5. Drop text. Expected results: After 4: Cursor changes to show a plus. After 5: Text is copied. Actual results: After 4: Nothing. After 5: Text is moved. If the pointer is moved between 4 and 5, the drag action changes as expected.
Part of the issue here is that GTK is not getting keyboard events because its grab widget is not in the window group of the focus window. (See bug 750061 comment 10 ff.)
Depends on: 750061
With the patch in bug 750061, the grab widget gets keyboard events and we just need to update our periodic motion event code to deal with them.
Assignee: nobody → karlt
Status: NEW → ASSIGNED
Attachment #620585 - Flags: review?(roc)
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: