b=751429 handle modifier changes in periodic synthetic mouse events for drag sources r=roc