widget/gtk2/nsDragService.h
@@ -207,8 +207,6 @@ private:
 
     // the source of our drags
     GtkWidget     *mHiddenWidget;
-    // the widget receiving mouse events
-    GtkWidget     *mGrabWidget;
     // our source data items
     nsCOMPtr<nsISupportsArray> mSourceDataItems;
 
